Completed RealEstate Pro backend modules